# fastapi_db

./: .env  README.md  database.py  db_dependecies.py  pyproject.toml
fastapi_db/: database.py
